# VibeSDLC

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  AGENT_EVENTS_SIMPLIFICATION.md  CLAUDE.md  DATETIME_IMPORT_FIX.md  GITHUB_APP_INTEGRATION.md  GITHUB_INSTALLATION_USER_API_UPDATE.md  GITHUB_INSTALL_BUTTON_CHECKLIST.md  LICENSE  OTP_FIX_SUMMARY.md  OTP_FORM_FIX_SUMMARY.md  PORT_CHANGE_SUMMARY.md  README-MICROSERVICES.md  README.md  SYSTEM_ARCHITECTURE.md  WARP.md  analyze_plan.py  bash.exe.stackdump  docker-compose.kafka.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  index.html  manage.py  package.json  pyproject.toml  readme.md  requirements.txt  story1.md  story2.md  story3.md  story4.md  story5.md  test_chat_simulation.py  test_option_a_auto_commit.py  test_sequential_branching.py  tmp_tail.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  IMPLEMENTATION_SUMMARY.md  MULTIPROCESSING_SETUP.md  RATE_LIMITING.md  README.md  alembic.ini  check_agents.py  check_and_create_wallet.py  check_enums.py  check_messages.py  check_stories.py  check_user.py  dev.py  docker-compose.yml  fix_subscription.py  init.sql  main.py  migrate.py  persona.py  pyproject.toml  reset_consumer_offset.py  reset_ws_bridge.py  run_dev_v2_kafka.py  run_dev_v2_real.py  run_test_demo.py  seed_nextjs.sql  seed_nextjs_techstack.py  test_ba_flow.py  test_dev.py  test_dev_story_direct.py  test_developer_v2_deepagents.py  test_kafka_agent_integration.py  test_kafka_topics.py  test_orchestrator_query.py  test_project_setup.py  test_story_event.py  (+7 more)
backend/agents_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/Versions/: 25b79eeac816_replace_dor_dod_with_acceptance_criteria.py  2a3720fc9b9a_add_project_id_to_agents.py  3c12fd52b38e_add_description_color_icon_to_projects.py  7201258dc03d_add_authentication_table.py  a0f9f0d8e849_fix_users_table_add_email_field.py  b62621ece33e_add_sdlc_models_tech_stack_agents_.py  efd8794d595e_add_capacity_to_agents_and_change_name_.py
backend/app/: database.py  dependencies.py  enums.py  kanban_schemas.py  main.py  models.py  schemas.py  seed_personas.py
backend/app/agents/: README.md  __init__.py  __main__.py  business_analyst_agent.py  config.yaml  developer_agent.py  flow_manager_agent.py  insights_consumer.py  orchestrator.py  router_agent.py  story_assistant_consumer.py  team.py  team_leader.py  tester_agent.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py
backend/app/core/: async_db.py  config.py  db.py  langfuse_client.py  logging_config.py  payos_client.py  redis_client.py  security.py  websocket_helper.py
backend/app/crews/: __init__.py
backend/app/crud/: __init__.py  blocker.py  project.py  project_rules.py
backend/app/kafka/: __init__.py  config.py  consumer.py  consumer_registry.py  ensure_topics.py  event_schemas.py  message_router.py  producer.py  response_logger.py  router_service.py  schemas.py  topics.py
backend/app/models/: __init__.py  agent.py  agent_pool.py  artifact.py  base.py  billing.py  execution.py  message.py  project.py  story.py  story_log.py  tech_stack.py  user.py
backend/app/routers/: __init__.py  agents.py  auth.py  epics.py  kafka_test.py  metrics.py  projects.py  stories.py  tech_stacks.py  users.py
backend/app/schemas/: __init__.py  agent.py  agent_management.py  artifacts.py  auth.py  common.py  credits.py  file.py  lean_kanban.py  linked_account.py  message.py  payment.py  persona.py  plan.py  profile.py  project.py  project_rules.py  sepay.py  story.py  subscription.py  tech_stack.py  two_factor.py  user.py
backend/app/services/: __init__.py  agent_pool_service.py  agent_service.py  artifact_service.py  auth_service.py  base.py  credit_service.py  epic_service.py  execution_service.py  kanban_service.py  linked_account_service.py  message_service.py  metrics_service.py  order_service.py  persona_service.py  plan_service.py  pool_service.py  project_rules_service.py  project_service.py  rule_service.py  scheduler_service.py  story_service.py  subscription_service.py  tech_stack_service.py  token_budget_service.py  two_factor_service.py  user_service.py
backend/benchmark/: benchmark_jina_code.py  main.py  pyproject.toml
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: add_story.py  dev-migrate.bat
backend/tests/: __init__.py  test_auto_db_push.py  test_dev_v2_full.py  test_dev_v2_real2.py  test_developer_v2.py  test_developer_v2_e2e.py  test_developer_v2_tools.py  test_implement_metagpt.py  test_implement_quality.py  test_langfuse_analyze.py  test_langfuse_dev_v2.py  test_langfuse_heavy.py  test_langfuse_integration.py  test_plan_only.py  test_plan_quality.py  test_plan_sequential.py  test_sequential_stories.py  test_team_leader.py
services/ai-agent-service/: .env  .env.example  DAYTONA_INTEGRATION_PLAN.md  DAYTONA_SANDBOX_CLEANUP.md  DEPENDENCY_CONTEXT_FIX.md  DIRECT_DISK_MIGRATION_GUIDE.md  Dockerfile  HOW_TO_RUN_SPRINT_EXECUTOR.md  IMPLEMENTATION_SUMMARY.md  LANGFUSE_CHANGES.md  LANGFUSE_INTEGRATION_SUMMARY.md  LANGFUSE_QUICKSTART.md  LLM_OUTPUT_IMPROVEMENTS.md  MULTIPLE_CONTROLLERS_ISSUE_ANALYSIS.md  OPENSWE_PROMPT_INTEGRATION_GUIDE.md  README.md  SPRINT_EXECUTOR_GUIDE.md  SPRINT_EXECUTOR_IMPLEMENTATION.md  SPRINT_EXECUTOR_QUICK_START.md  TAVILY_SDK_UPGRADE_SUMMARY.md  TEST_CASES.md  VIRTUAL_FS_TO_DIRECT_DISK_ANALYSIS.md  WEBSEARCH_INTEGRATION_SUMMARY.md  XML_TAGS_STANDARDIZATION.md  debug_auth_simple.py  debug_detailed_comparison.py  debug_formatted_content.py  debug_implementation_plan_issue.py  debug_line_endings.py  debug_planner_output.py  debug_planner_simple.py  debug_planner_state_TASK-001.json  demo_raw_json_output.py  demo_websearch_integration.py  langgraph.json  pyproject.toml  run_demo_agent.py  run_sprint_advanced.py  run_sprint_executor.py  setup_project.py  (+76 more)
services/api-gateway/: pyproject.toml
services/deepagents/: README.md  pyproject.toml
services/po-agent/: .env  .env.example  README.md  main.py  pyproject.toml
(+1873 files in other folders)
