[project]
name = "backenbacken-vibesdlc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "confluent-kafka>=2.8.1",
    "crewai>=1.4.1",
    "crewai-tools>=1.4.1",
    "fastapi[standard]>=0.121.1",
    "python-jose[cryptography]>=3.3.0",
    "openai>=2.7.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.44",
    "requests>=2.32.5",
]
