[project]
name = "agents-service"
version = "0.0.1"
description = "Scrum Agents team in a service that expose through some http routes for frontend and management services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core framework
    "deepagents>=0.0.10",
    # Web framework
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    # LangChain ecosystem
    "langchain>=0.3.27",
    "langchain-openai==0.3.20",
    "langchain-postgres>=0.0.15",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-postgres>=2.0.24",
    "langfuse>=3.6.1",
    # Database & Vector store
    "psycopg[binary]>=3.0.0", # PostgreSQL driver for langchain-postgres
    "pgvector>=0.2.5", # Vector similarity search
    # Utilities
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "passlib[bcrypt]>=1.7.4",
    "pylint>=3.3.8",
    "langchain-core>=0.3.0,<0.4.0",
    "pytest>=8.4.2",
    "gitpython>=3.1.45",
    "tavily-python>=0.7.12",
]



[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = ["ruff", "pylint", "pytest"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"
