[project]
name = "agents-service"
version = "0.0.1"
description = "Scrum Agents team in a service that expose through some http routes for frontend and management services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "python-multipart>=0.0.17",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    # LangChain ecosystem - Latest versions
    "langchain>=0.3.13",
    "langchain-openai>=0.2.14",
    "langchain-anthropic>=0.3.3",
    "langchain-community>=0.3.13",
    "langchain-core>=0.3.28",
    "langgraph>=0.2.62",
    "langsmith>=0.2.7",
    # LangFuse for observability
    "langfuse>=2.50.0",
    # Server
    "uvicorn>=0.34.0",
    "openagents>=0.6.12",
    "jwt>=1.4.0",
    "sqlmodel>=0.0.27",
    "alembic>=1.17.0",
    "psycopg[binary]>=3.2.10",
    "pyjwt>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "emails>=0.6",
    "slowapi>=0.1.9",
    "authlib>=1.6.5",
    "httpx-oauth>=0.16.1",
    "deepagents>=0.1.2",
    "pytest>=8.4.2",
]



[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = ["ruff", "pylint", "pytest"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"
