[project]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway for VibeSDLC microservices"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "httpx<1.0.0,>=0.25.1",
    "pydantic>2.0",
    "pydantic-settings<3.0.0,>=2.2.1",
    "python-multipart<1.0.0,>=0.0.7",
    "pyjwt<3.0.0,>=2.8.0",
    # Rate limiting and middleware
    "slowapi<1.0.0,>=0.1.9",
    "redis<6.0.0,>=5.0.0",
    # CORS and security
    "python-jose[cryptography]<4.0.0,>=3.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "pytest-asyncio<1.0.0,>=0.21.0",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "pre-commit<4.0.0,>=3.6.2",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true