[project]
name = "deepagents"
version = "0.0.10"
description = "General purpose 'deep agent' with sub-agent spawning, todo list capabilities, and mock file system. Built on LangGraph."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=1.0.0a3",
    "langchain-anthropic>=0.1.23",
    "langchain>=1.0.0a10",
    "langgraph-prebuilt>=0.7.0a2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "build",
    "twine",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deepagents", "tests"]
[tool.setuptools.package-dir]
"deepagents" = "src/deepagents"
"tests" = "tests"

[tool.setuptools.package-data]
"*" = ["py.typed"]
