[project]
name = "po-agent"
version = "0.1.0"
description = "Product Owner Agent for VibeSDLC - includes Gatherer, Vision, Backlog, Priority sub-agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-tavily>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
]
