[project]
name = "po-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.6.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.77",
    "langchain-openai>=0.3.34",
    "langfuse>=3.6.0",
]
