[project]
name = "dev"
version = "0.1.0"
description = "dev using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "cocoindex[embeddings]>=0.3.7",
    "crewai[tools]==1.4.1",
    "ddgs>=9.9.0",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
    "pgvector>=0.4.1",
    "psycopg[binary,pool]>=3.2.12",
    "psycopg-pool>=3.2.7",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "docling>=2.61.2",
    "crewai-tools>=1.4.1",
    "litellm>=1.80.0",
    "langfuse>=3.10.0",
    "openlit>=1.34.30",
    "google-cloud-aiplatform",
    "anthropic",
    "voyageai>=0.3.5",
    "tavily-python>=0.7.13",
]

[project.scripts]
dev = "dev.main:run"
run_crew = "dev.main:run"
train = "dev.main:train"
replay = "dev.main:replay"
test = "dev.main:test"
run_with_trigger = "dev.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
